# rosbag-recorder

./: CMakeLists.txt  README.md  package.xml
launch/: rosbag_recorder.launch
rosbag_recorder/launch/: rosbag_recorder.launch
scripts/: bag_pickle.py  rosbag_recorder_server.py
